--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en class=sr><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width, initial-scale=1"><link rel="icon shortcut" type=image/png href=./favicon.a58db67b.png><title>Omid Karimi | Developer</title><meta name=keywords content="Omid Karimi, Omid, Python, Django"><meta name=description content="Omid Karimi | Developer"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href=./simplefolio.51a2bd01.css><script defer src=https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js></script><script async defer src=https://buttons.github.io/buttons.js></script><body>
+<!DOCTYPE html><html lang=en class=sr><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width, initial-scale=1"><link rel="icon shortcut" type=image/jpg href=./logo.jpg><title>Omid Karimi | Developer</title><meta name=keywords content="Omid Karimi, Omid, Python, Django"><meta name=description content="Omid Karimi | Developer"><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css><link rel=stylesheet href=./simplefolio.51a2bd01.css><script defer src=https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js></script><script async defer src=https://buttons.github.io/buttons.js></script><body>
     <div id=top></div>
 
     
@@ -23,7 +23,7 @@
         <div class="about-wrapper row">
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__image load-hidden">
-              <img alt="Profile Image" class="img-fluid rounded shadow-lg" height=auto width=300px src=./profile.8f19b361.jpg>
+              <img alt="Profile Image" class="img-fluid rounded shadow-lg" height=auto width=300px src=./profile.jpg>
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -81,7 +81,7 @@
               <div class="load-hidden project-wrapper__image">
                 <a rel=noreferrer href=#! target=_blank>
                   <div data-tilt data-tilt-max=4 data-tilt-glare=true data-tilt-max-glare=0.5 class="js-tilt rounded thumbnail">
-                    <img alt="Project Image" class=img-fluid src=./project.0b14f8de.jpg>
+                    <img alt="Project Image" class=img-fluid src=./TSBC-bot.jpg>
                   </div>
                 </a>
               </div>
@@ -114,7 +114,7 @@
               <div class="load-hidden project-wrapper__image">
                 <a rel=noreferrer href=#! target=_blank>
                   <div data-tilt data-tilt-max=4 data-tilt-glare=true data-tilt-max-glare=0.5 class="js-tilt rounded thumbnail">
-                    <img alt="Project Image" class=img-fluid src=./project.0b14f8de.jpg>
+                    <img alt="Project Image" class=img-fluid src=./project2.jpg>
                   </div>
                 </a>
               </div>
