--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="load-hidden project-wrapper__image">
                 <a rel=noreferrer href=#! target=_blank>
                   <div data-tilt data-tilt-max=4 data-tilt-glare=true data-tilt-max-glare=0.5 class="js-tilt rounded thumbnail">
-                    <img alt="Project Image" class=img-fluid src=./TSBC-bot.jpg>
+                    <img alt="Project Image" class=img-fluid src=./cartoon-ai-robot-character-scene.jpg>
                   </div>
                 </a>
               </div>
