--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a rel=noreferrer target=_blank class="cta-btn cta-btn--resume" href=./assets/resume.pdf>
                   View Resume
                 </a>
+                <a rel=noreferrer target=_blank class="cta-btn cta-btn--resume--latex-format" href=./assets/CV-Latex-base.txt>
+                  Resume Latex format
+                </a>
               </span>
             </div>
           </div>
@@ -72,14 +75,14 @@
 <!--                <a rel=noreferrer target=_blank class="cta-btn cta-btn--hero" href=#!>
                   See Live
                 </a>
--->                <a rel=noreferrer target=_blank class="cta-btn text-color-main" href=#!>
+-->                <a rel=noreferrer target=_blank class="cta-btn text-color-main" href=https://github.com/O-Karimi/AZTA-Telegram-Bot>
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="load-hidden project-wrapper__image">
-                <a rel=noreferrer href=#! target=_blank>
+                <a rel=noreferrer href=https://github.com/O-Karimi/AZTA-Telegram-Bot target=_blank>
                   <div data-tilt data-tilt-max=4 data-tilt-glare=true data-tilt-max-glare=0.5 class="js-tilt rounded thumbnail">
                     <img alt="Project Image" class=img-fluid src=./cartoon-ai-robot-character-scene.jpg>
                   </div>
@@ -105,14 +108,14 @@
 <!--                <a rel=noreferrer target=_blank class="cta-btn cta-btn--hero" href=#!>
                   See Live
                 </a>
--->                <a rel=noreferrer target=_blank class="cta-btn text-color-main" href=#!>
+-->                <a rel=noreferrer target=_blank class="cta-btn text-color-main" href=https://github.com/O-Karimi/First-One-Page-Web>
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="load-hidden project-wrapper__image">
-                <a rel=noreferrer href=#! target=_blank>
+                <a rel=noreferrer href=https://github.com/O-Karimi/First-One-Page-Web target=_blank>
                   <div data-tilt data-tilt-max=4 data-tilt-glare=true data-tilt-max-glare=0.5 class="js-tilt rounded thumbnail">
                     <img alt="Project Image" class=img-fluid src=./project2.jpg>
                   </div>
@@ -176,13 +179,13 @@
           <i class="fa fa-2x fa-angle-up" aria-hidden=true></i>
         </a>
         <div class=social-links>
-          <a rel=noreferrer href=#! target=_blank>
+<!--          <a rel=noreferrer href=#! target=_blank>
             <i class="fa fa-inverse fa-twitter"></i>
           </a>
-          <a rel=noreferrer href=#! target=_blank>
+-->          <a rel=noreferrer href=https://www.linkedin.com/in/o-karimi/ target=_blank>
             <i class="fa fa-inverse fa-linkedin"></i>
           </a>
-          <a rel=noreferrer href=#! target=_blank>
+          <a rel=noreferrer href=https://github.com/O-Karimi/ target=_blank>
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -195,12 +198,12 @@
           <a rel=noreferrer href=https://github.com/cobiwave target=_blank>Jacobo Martínez</a>
         </p>
 
-        
+<!--        
         <p class="mt-3 pt-3">
           <a rel=noreferrer class=github-button href=https://github.com/cobiwave/simplefolio/fork data-icon=octicon-repo-forked data-size=large data-show-count=true aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
           <a rel=noreferrer class=github-button href=https://github.com/cobiwave/simplefolio data-icon=octicon-star data-size=large data-show-count=true aria-label="Star cobiwave/simplefolio on GitHub">Star</a>
         </p>
-      </div>
+-->      </div>
     </footer>
     
 
