--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 <a rel=noreferrer target=_blank class="cta-btn cta-btn--resume" href=./assets/resume.pdf>
                   View Resume
                 </a>
+              </span>
+              <span class="d-flex mt-3">
                 <a rel=noreferrer target=_blank class="cta-btn cta-btn--resume--latex-format" href=./assets/CV-Latex-base.txt>
                   Resume Latex format
                 </a>
